spring boot web service refactor.

--- a/communication-stack/soap/spring-boot-soap/client/pom.xml
+++ b/communication-stack/soap/spring-boot-soap/client/pom.xml
@@ -12,4 +12,30 @@
     <artifactId>client</artifactId>
 
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.14.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <schemaLanguage>WSDL</schemaLanguage>
+                    <generatePackage>com.example.demo.ws</generatePackage>
+                    <schemas>
+                        <schema>
+                            <url>http://192.168.1.11/OpcXML-Da.wsdl</url>
+                        </schema>
+                    </schemas>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
